# evolve-py

./: .gitignore  ETL-IR-CONSIDERATIONS.md  Makefile  README.md  example-fwf-schema.json  example-fwf-schema2.json  example-pipeline.yaml  example-schema.json  main.py  pyproject.toml  test-fwf-to-csv.py  test-multi-fwf-to-csv.py  test-pipeline-from-yaml.py  test.py  todo
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
bench/: duckdb_attach_vs_scan_postgres.py
docs/: benchmark_stuffs.md  iceberg_stuff.md  polars_stuff.md
examples/: local_csv_to_parquet.py  local_fwf_to_csv.py  s3_csv_to_arrow_dataset.py  s3_csv_to_parquet.py
examples/data/: dummy.csv  dummy.json
examples/schemas/: example-200MB-schema.json
src/evolve/: __init__.py  _utils.py  exceptions.py  ir.py  old_source.py  old_target.py  pipeline.py  source.py  target.py  transform.py  utils.py
src/evolve/io/: __init__.py  _base.py  _utils.py  arrow_dataset.py  bytes.py  csv.py  fixed_width.py  iceberg.py  json.py  jsonl.py  kafka_topic.py  multi_fixed_width.py  parquet.py  postgres.py  sqlite.py
src/evolve/source/: __init__.py  base.py  bytes.py  csv.py  parquet.py  postgres.py
tests/: conftest.py  test_pg_duckdb.py  test_pipeline.py  test_source.py
tests/io/: test_arrow_dataset.py  test_bytes.py  test_csv.py  test_parquet.py  test_postgres.py
tests/source/: test_csv.py  test_parquet.py  test_postgres.py
