[project]
name = "evolve-py"
version = "0.1.0"
description = " A highly efficient, composable, and lightweight Apache Arrow native ETL framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.11.1",
    "duckdb>=1.3.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
]
[dependency-groups]
dev = [
    "minio>=7.2.16",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "sqlalchemy>=2.0.43",
    "testcontainers>=4.12.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "W", "E", "F", "B", "I", "ANN", "ASYNC", "S", "C4", "PTH", "N", "PERF"]
ignore = ["D100", "D104", "D105", "D203", "D205", "D212"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F402"]
"test_*.py" = ["S", "D", "ANN", "E501"]
